--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,14 +14,17 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Post!</a>
+        <a href="/">Tech Blog</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
+        <a href="/">homepage</a>
+        <a href="/dashboard">dashboard</a>
         <button class="no-button" id="logout">logout</button>
         {{else}}
+        <a href="/">homepage</a>
+        <a href="/dashboard">dashboard</a>
         <a href="/login">login</a>
         {{/if}}
       </nav>
