--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,11 +18,11 @@
       <nav>
       {{!-- conditionally render login/logout routes --}}
         {{#if logged_in}}
-        <a href="/">homepage</a>
+        <a href="/">home</a>
         <a href="/dashboard">dashboard</a>
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/">homepage</a>
+        <a href="/">home</a>
         <a href="/dashboard">dashboard</a>
         <a href="/login">login</a>
         {{/if}}
